--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-scss": "^4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "fontawesome-4.7": "^4.7.0",
+    "jquery": "^3.2.0",
+    "jssha": "^3.2.0",
+    "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.6.11",
+    "vue-cute-timeline": "^1.2.8",
+    "vue-router": "^3.5.1",
+    "vue2-leaflet": "^2.7.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
