--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-cute-timeline": "^1.2.8",
     "vue-router": "^3.5.1",
+    "vue-select": "^3.16.0",
     "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
   },
