--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.6.11",
     "vue-cute-timeline": "^1.2.8",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vue-select": "^3.16.0",
     "vue2-leaflet": "^2.7.1",
